js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-block-labeled-no-new-call-expression-prop-access.js







































$DONOTEVALUATE();

label: {
  new import('').prop;
};
